--- a/src/styles/FavoritesPage.css
+++ b/src/styles/FavoritesPage.css
@@ -8,9 +8,29 @@
     margin-bottom: 20px;
   }
   
-  .movie-cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
+ 
+  .movie-card {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 20px;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .movie-card img {
+    width: 250px;
+    height: 350px;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+  
+  .movie-card h2 {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+  
+  .movie-card p {
+    font-size: 14px;
+    color: #666;
   }
