--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,8 +1,13 @@
 .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 3px;
     background-color: #f0f0f0;
   }
   
