--- a/src/styles/FavoritesPage.css
+++ b/src/styles/FavoritesPage.css
@@ -1,14 +1,22 @@
+/* Styles the main container for the favorites page */
 .favorites-page {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
+  /* Styles the heading for the favorites section */
   .favorites-page h2 {
     margin-bottom: 20px;
   }
-  
- 
+  /* Styles the container for the movie cards */
+  .movie-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+
+  /* Styles each individual movie card */
   .movie-card {
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -17,7 +25,9 @@
     background-color: #fff;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   }
-  
+
+
+  /* Styles the image within each movie card */
   .movie-card img {
     width: 250px;
     height: 350px;
@@ -25,11 +35,13 @@
     margin-bottom: 10px;
   }
   
+  /* Styles the title of the movie within the card */
   .movie-card h2 {
     font-size: 18px;
     margin-bottom: 5px;
   }
   
+  /* Styles the overview text within the card */
   .movie-card p {
     font-size: 14px;
     color: #666;
