--- a/src/styles/MovieCard.css
+++ b/src/styles/MovieCard.css
@@ -1,25 +1,30 @@
+
+/* Styles the container for each movie card */
 .movie-card {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 20px;
-    background-color: #fff;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .movie-card img {
-    width: 250px;
-    height: 350px;
-    object-fit: cover;
-    margin-bottom: 10px;
-  }
-  
-  .movie-card h2 {
-    font-size: 18px;
-    margin-bottom: 5px;
-  }
-  
-  .movie-card p {
-    font-size: 14px;
-    color: #666;
-  }
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+/* Styles the image within the movie card */
+.movie-card img {
+  width: 250px;
+  height: 350px;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+
+/* Styles the title of the movie within the card */
+.movie-card h2 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+/* Styles the overview text within the card */
+.movie-card p {
+  font-size: 14px;
+  color: #666;
+}
