--- a/src/styles/MovieList.css
+++ b/src/styles/MovieList.css
@@ -1,16 +1,21 @@
+
+/* Styles the main container for the movie list */
 .movie-list {
     display: flex;
     flex-direction: column;
   }
-  
-  .movie-cards {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 20px;
-  }
 
-  .movie-card {
-    /* Existing styles for movie cards */
-    flex: 1 0 300px; /* Set a fixed width for each card */
-  }
+/* Styles the container for the movie cards */
+.movie-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px; /* Adjust the gap as needed */
+  margin-top: 20px;
+}
+
+/* Styles each individual movie card */
+.movie-card {
+  /* Existing styles for movie cards */
+  flex: 1 0 250px; /* Set a fixed width for each card */
+  max-width:250px;
+}
